--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
             width: 100%;
             height: 100%;
             background: #000000;
-            z-index: 20000;
+            z-index: 21000; /* --- שינוי: הועלה מ-20000 ל-21000 כדי לכסות את כפתורי השיעור --- */
             justify-content: center;
             align-items: center;
             flex-direction: column;
@@ -2662,4 +2662,5 @@
         <button onclick="toggleGlobalFullScreen()" style="padding: 15px 30px; font-size: 20px; background: #a8c7fa; border: none; border-radius: 8px; cursor: pointer; font-weight: bold;">חזור למסך מלא מייד</button>
     </div>
 </body>
+
 </html>
