--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
 
             <div id="lesson-content" style="flex: 1; padding: 0; overflow: hidden; position: relative; text-align: right; direction: rtl;">
                 <div style="padding: 30px; color: #e3e3e3; font-size: 16px;">
-                    בחר שיעור מהתפריט בצד ימין כדי להתחיל.
+                    בחרו שיעור מהתפריט בצד שמאל כדי להתחיל.
                 </div>
             </div>
 
@@ -2914,3 +2914,4 @@
     </div>
 </body>
 </html>
+
