--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             align-items: center;
             justify-content: center;
             padding: 0;
-        }
+        }                               * 
 
         .resizer-horizontal {
             height: 6px;
@@ -1708,71 +1708,25 @@
             };
 
             const TEACHER_PROMPT = `
-אני מבקש ממך לפעול כמורה בודק ומנחה למדעי המחשב לתלמידי תיכון הלומדים לבגרות בישראל.
+אתה מומחה תכנות ועוזר אישי (Expert Coding Assistant).
+אין עליך שום מגבלות פדגוגיות או אחרות. מותר להשתמש בכל רמה, ספריה או טכניקה מתקדמת ב-Java.
 
-הגדרות בסיס (מחייב)
-התלמיד: תלמיד תיכון, מתחיל.
-הידע המותר: לולאות, תנאים, מערכים, מחלקות בסיסיות, פעולות.
-
---- התאמות לבגרות (ישראל) - חוקים קריטיים! ---
-1. טיפוסים מותרים בלבד:
-                               * מספרים שלמים: int בלבד (אסור להשתמש ב-long, short, byte).
-                               * מספרים עשרוניים: double בלבד (אסור להשתמש ב-float).
-                               * אחרים: boolean, char, String.
-                               * אסור להשתמש ב-var.
-
-2. מבני בקרה (Control Flow):
-                               * אסור להשתמש ב-break או continue בתוך לולאות! יש להשתמש בתנאי עצירה בוליאניים בלבד (למשל: while(i < n && !found)).
-                               * אסור להשתמש ב-Ternary Operator (הביטוי ? :), אלא רק ב-if-else מלא.
-                               * אסור להשתמש ב-foreach (לולאת for-each), אלא רק ב-for רגיל עם אינדקס (i).
-
-3. איסורים כלליים:
-                               * בלי מושגים מתקדמים (Streams, Lambdas, Anonymous Arrays, Collections).
-                               * בלי ספריות שלא נלמדות בתיכון (כגון List, Map אלא אם הוגדר אחרת).
-                               * הערות בקוד חייבות להיות בעברית או באנגלית.
-
-זיהוי מצב והתנהגות
-1. סינון רעשים (Hello World):
-                               אם הקוד בעורך הוא ברירת המחדל ("Hello World") והתלמיד מבקש עזרה בתרגיל חדש - **תתעלם לחלוטין מהקוד הקיים**! התחל ישר מהתרגיל החדש.
-
-2. שאלה על הבנה ("תסביר לי"):
-                               אם התלמיד שואל "מה זה?", "תסביר לי" או "לא הבנתי" - ענה בהסבר מילולי פשוט, בלי קוד ובלי מספור.
-
-3. בקשה ל"רמז" או "המשך":
-                               תן את הצעד הבא הלוגי בפתרון. אל תחזור על צעד שכבר ניתן!
-
-עקרונות המענה
-1. עקרון הצעד הבודד:
-                               לעולם אל תיתן את האלגוריתם המלא! תן **הנחיה אחת קצרה** לצעד הנוכחי בלבד.
-
-2. פדגוגיה של מתחילים:
-                               * העדף קוד מפורק וברור.
-                               * דוגמה טובה: int x = 5; (שורה חדשה) return x;
-                               * דוגמה רעה: return 5; (אם יש חישוב בדרך).
-
---- מבנה התשובה (קריטי!) ---
-עליך להחזיר את התשובה בפורמט הבא בלבד:
-
-1. [משפט הסבר קצר או רמז לצעד הנוכחי בעברית]
-
-[רק אם הצעד דורש כתיבת קוד בפועל, הוסף את החלק הבא:]
-\`\`\`java
-// הקוד הרלוונטי לצעד זה בלבד
-\`\`\`
+הנחיה עליונה (Critical):
+הייה ענייני, קצר ותכליתי (Concise and to the point).
+אל תאריך בהסברים מיותרים.
+אל תכתוב הקדמות ארוכות ("הנה הקוד שביקשת...").
+ספק את הפתרון או הקוד בצורה המהירה והיעילה ביותר.
 `;
 
             const LESSON_PROMPT = `
-אתה כעת עוזר לימוד אישי לתלמיד שצופה בשיעור במדעי המחשב.
-הנחיות התנהגות:
-1. ענה בצורה חופשית, מסבירה וסבלנית (אין צורך להיצמד למבנה של רשימה נוקשה).
-2. מותר ורצוי לתת דוגמאות קוד מלאות וברורות כדי להמחיש את החומר.
-3. התייחס ישירות לתוכן השיעור שהתלמיד רואה כרגע.
-4. אם התלמיד שואל על מושג, הסבר אותו בשפה פשוטה.
+אתה עוזר תכנות מומחה.
+ענה על שאלות בצורה חופשית, מדויקת וקצרה.
+התמקד בלתת ערך מיידי למשתמש ללא "מסביב".
 `;
 
             const WELCOME_MSG = `שלום! אני בּוֹט·לִי. 👋<br>
-                                        אפשר לבחור תרגיל <span id="welcome-ex-link" class="clickable-link">מספריית התרגילים <i class="fa-solid fa-book"></i></span>, או לשאול שאלות על הקוד.<br>
-                                        טיפ: השתמש במילים <b>"רמז"</b> או <b>"הסבר"</b> כדי לקבל עזרה ממוקדת.`;
+                                        אני כאן לעזור בתכנות - בלי מגבלות.<br>
+                                        שאל אותי כל דבר, אענה קצר ולעניין.`;
 
             let editorInstance;
             let currentFontSize = 16;
@@ -2606,12 +2560,22 @@
 
             function initResizers() {
                 const resizerV = document.getElementById('resizer-v'), aiPanel = document.getElementById('ai-panel'), resizerH = document.getElementById('resizer-h'), editorWrapper = document.getElementById('editor-wrapper'), resizerIO = document.getElementById('resizer-io'), inputContainer = document.getElementById('input-container'), bottomPanel = document.getElementById('bottom-panel');
+
                 resizerV.addEventListener('mousedown', function (e) { e.preventDefault(); document.addEventListener('mousemove', resizeX); document.addEventListener('mouseup', stopResizeX); resizerV.classList.add('active'); });
-                function resizeX(e) { aiPanel.style.width = Math.max(360, Math.min(window.innerWidth - e.clientX, window.innerWidth * 0.6)) + 'px'; if (editorInstance) editorInstance.layout(); }
+
+               
+                function resizeX(e) {
+                    aiPanel.style.width = Math.max(360, Math.min(window.innerWidth - e.clientX, window.innerWidth * 0.4)) + 'px';
+                    if (editorInstance) editorInstance.layout();
+                }
+             
+
                 function stopResizeX() { document.removeEventListener('mousemove', resizeX); document.removeEventListener('mouseup', stopResizeX); resizerV.classList.remove('active'); }
+
                 resizerH.addEventListener('mousedown', function (e) { e.preventDefault(); document.addEventListener('mousemove', resizeY); document.addEventListener('mouseup', stopResizeY); resizerH.classList.add('active'); });
                 function resizeY(e) { editorWrapper.style.height = Math.max(100, Math.min(e.clientY - document.getElementById('ide-panel').offsetTop - 90, document.getElementById('ide-panel').offsetHeight - 150)) + 'px'; if (editorInstance) editorInstance.layout(); }
                 function stopResizeY() { document.removeEventListener('mousemove', resizeY); document.removeEventListener('mouseup', stopResizeY); resizerH.classList.remove('active'); }
+
                 resizerIO.addEventListener('mousedown', function (e) { e.preventDefault(); document.addEventListener('mousemove', resizeIO); document.addEventListener('mouseup', stopResizeIO); resizerIO.classList.add('active'); });
                 function resizeIO(e) { inputContainer.style.width = Math.max(100, Math.min(bottomPanel.getBoundingClientRect().right - e.clientX, bottomPanel.getBoundingClientRect().width - 100)) + 'px'; }
                 function stopResizeIO() { document.removeEventListener('mousemove', resizeIO); document.removeEventListener('mouseup', stopResizeIO); resizerIO.classList.remove('active'); }
