--- a/index.html
+++ b/index.html
@@ -3271,9 +3271,12 @@
                 // מצב 3: אין שיחה -> מתחילים שיחה חדשה
                 overlay.style.display = 'flex';
 
-                const domain = 'meet.jit.si';
+                // --- התיקון: שימוש בשרת קהילתי ללא מגבלת 5 דקות ---
+                const domain = 'meet.guifi.net';
+                // --------------------------------------------------
+
                 const options = {
-                    roomName: 'BotLi_Classroom_Main',
+                    roomName: 'BotLi_Classroom_Main_Sabag', // הוספתי סיומת ייחודית כדי שלא ייכנסו זרים
                     width: '100%',
                     height: '100%',
                     parentNode: container,
@@ -3282,14 +3285,31 @@
                     },
                     configOverwrite: {
                         startWithAudioMuted: true,
-                        startWithVideoMuted: true
+                        startWithVideoMuted: true,
+                        prejoinPageEnabled: false // דילוג על מסך "הצטרף"
                     },
                     interfaceConfigOverwrite: {
-                        SHOW_JITSI_WATERMARK: false
+                        SHOW_JITSI_WATERMARK: false,
+                        TOOLBAR_BUTTONS: [
+                            'microphone', 'camera', 'closedcaptions', 'desktop', 'fullscreen',
+                            'fodeviceselection', 'hangup', 'profile', 'chat', 'recording',
+                            'livestreaming', 'etherpad', 'sharedvideo', 'settings', 'raisehand',
+                            'videoquality', 'filmstrip', 'feedback', 'stats', 'shortcuts',
+                            'tileview', 'videobackgroundblur', 'download', 'help', 'mute-everyone'
+                        ]
                     }
                 };
 
                 jitsiApi = new JitsiMeetExternalAPI(domain, options);
+
+                // האזנה לאירוע ניתוק (כדי לסגור את החלון כשהתלמיד לוחץ על הטלפון האדום)
+                jitsiApi.addEventListeners({
+                    videoConferenceLeft: function () {
+                        overlay.style.display = 'none';
+                        jitsiApi.dispose();
+                        jitsiApi = null;
+                    }
+                });
             }
         }
 
