--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
                 }, 100);
             }
 
-            const CONTROL_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyqurwK5W6q9cabXLCEAbUPT4zSEbD2FgdiamSUwqr4Fbd3A1guXQcxU_cWxb29SQb3/exec";
+            const CONTROL_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzdDnzL7JRzQIM0FwZKiWhijQzb6sgbOjZ_2l-L71iBe1_QkqgMcDZL9oO44Ihlh4zXcA/exec";
             const ORIGINAL_SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT7dGkvqmR6SZR1K6CQO_xSkpeP4I78Dycw_58HoscO_WRkK3NWZcUtIdTRELwPCnG79NHcBFV7euoB/pub?output=csv";
             const EXERCISES_CSV_URL = "https://corsproxy.io/?" + encodeURIComponent(ORIGINAL_SHEET_URL);
             const GOOGLE_FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLSdfkV1E_rCAlRt6qcvIwI4Nmb5QRqN0S6vo7-mPx_shgknVzQ/formResponse";
@@ -1639,6 +1639,7 @@
             let EXERCISES_DB = {};
             let currentActiveExercise = null;
             let globalStudentName = "";
+            let currentLandingDocUrl = "";
             let isSystemInteraction = false;
             let lastSystemMessage = "";
 
@@ -1872,17 +1873,13 @@
 
                     // --- לוגיקה מעודכנת להודעות (תא A4) ---
                     if (data.message && data.message.trim() !== "") {
-                        // אם ההודעה השתנתה מהפעם האחרונה
                         if (data.message !== lastSystemMessage) {
                             lastSystemMessage = data.message;
-                            window.lastSystemMessage = lastSystemMessage; // עדכון גלובלי
-
+                            window.lastSystemMessage = lastSystemMessage;
                             if (globalStudentName) {
-                                // בדיקה: האם זה קישור?
                                 if (lastSystemMessage.startsWith("http")) {
                                     showUrlModal(lastSystemMessage);
                                 } else {
-                                    // טקסט רגיל
                                     await Sys.alert("📢 הודעת כיתה:\n\n" + lastSystemMessage);
                                 }
                             }
@@ -1890,7 +1887,21 @@
                     } else {
                         window.lastSystemMessage = "";
                     }
-                    // ---------------------------------------
+
+                    // --- לוגיקה חדשה: דף נחיתה / לוח מודעות (תא A3) ---
+                    if (data.landingDoc && data.landingDoc.trim() !== "") {
+                        // בודקים אם הקישור השתנה או שעדיין לא נטען
+                        if (data.landingDoc !== currentLandingDocUrl) {
+                            currentLandingDocUrl = data.landingDoc;
+
+                            // טוענים את דף הנחיתה רק אם התלמיד לא בחר שיעור אחר כרגע
+                            // (כלומר הוא עדיין במסך הריק ההתחלתי)
+                            if (!currentLessonContext && isLearningMode) {
+                                renderLandingPage(currentLandingDocUrl);
+                            }
+                        }
+                    }
+                    // ---------------------------------------------------
 
                     if (data.watchdog === "off") {
                         isWatchdogActive = false;
@@ -2552,6 +2563,35 @@
 
                 // הודעה קטנה במערכת (לא מפריעה למשתמש)
                 addMessage(`פתחת את השיעור: <b>${lesson.title}</b>.`, 'system');
+            }
+
+            function renderLandingPage(url) {
+                const lessonContentDiv = document.getElementById('lesson-content');
+                if (!lessonContentDiv) return;
+
+                // ניקוי המסך (מוחק את הטקסט "בחרו שיעור...")
+                lessonContentDiv.innerHTML = '';
+                lessonContentDiv.style.padding = "0";
+                lessonContentDiv.style.overflow = "hidden";
+
+                let embedUrl = url;
+                // המרה ל-Preview כמו בשיעורים רגילים
+                if (embedUrl.includes("/edit")) embedUrl = embedUrl.replace(/\/edit.*/, "/preview");
+                else if (embedUrl.includes("/view")) embedUrl = embedUrl.replace(/\/view.*/, "/preview");
+
+                const iframe = document.createElement('iframe');
+                iframe.src = embedUrl;
+                iframe.className = 'doc-frame'; // שימוש באותה מחלקה כדי לקבל את הפילטרים (מצב לילה)
+                iframe.style.width = "100%";
+                iframe.style.height = "100%";
+                iframe.style.border = "none";
+                iframe.style.display = "block";
+
+                // הגדרת מצב לילה כברירת מחדל (תואם לשאר המערכת)
+                iframe.style.filter = "invert(1) hue-rotate(180deg)";
+                iframe.style.background = "#fff";
+
+                lessonContentDiv.appendChild(iframe);
             }
 
             async function copyLessonCode() {
