--- a/index.html
+++ b/index.html
@@ -1487,9 +1487,10 @@
             </div>
 
             <div id="lesson-content" style="flex: 1; padding: 0; overflow: hidden; position: relative; text-align: right; direction: rtl;">
-                <div style="padding: 30px; color: #e3e3e3; font-size: 16px;">
-                    בחרו שיעור מהתפריט בצד שמאל כדי להתחיל.
-                </div>
+                <iframe src="https://docs.google.com/document/d/1JFF4NCId8Xs0Lb1XgdLe7kZUh4nCbhHEhbJWmt-ioJE/preview"
+                        class="doc-frame"
+                        style="width: 100%; height: 100%; border: none; display: block; filter: invert(1) hue-rotate(180deg); background: #fff;">
+                </iframe>
             </div>
 
             <div class="lesson-zoom-controls" style="position: absolute; bottom: 20px; right: 30px; z-index: 20001; display: flex; gap: 8px;">
