--- a/index.html
+++ b/index.html
@@ -1607,7 +1607,8 @@
 
                 <div id="msg-bubble" style="display: none; position: absolute; top: 50px; right: 0; width: 300px; background: #1e1f20; border: 1px solid #a8c7fa; padding: 15px; border-radius: 8px; z-index: 30000; text-align: right; direction: rtl; box-shadow: 0 5px 20px rgba(0,0,0,0.5); color: #e3e3e3; font-size: 14px; line-height: 1.5;">
                     <i class="fa-solid fa-xmark msg-close-x" onclick="toggleMessageBubble()" title="סגור"></i>
-                    <div style="font-weight: bold; color: #a8c7fa; margin-bottom: 5px; border-bottom: 1px solid #444; padding-bottom: 5px;">הודעה מהמורה:</div>
+                   
+                   <div style="font-weight: bold; color: #a8c7fa; margin-bottom: 5px; border-bottom: 1px solid #444; padding-bottom: 5px;">הודעה מהמורה:</div>
                     <div id="msg-bubble-content"></div>
                 </div>
 
@@ -1649,13 +1650,11 @@
             </div>
 
             <div class="lesson-zoom-controls" style="position: absolute; bottom: 20px; right: 30px; z-index: 20001; display: flex; gap: 8px;">
-
                 <button class="zoom-btn" onclick="toggleLessonFullScreen()" title="מסך מלא"><i id="fs-lesson-icon" class="fa-solid fa-expand"></i></button>
-
+                <button class="zoom-btn" onclick="zoomLesson(0.1)" title="הגדל תצוגה"><i class="fa-solid fa-plus"></i></button>
+                <button class="zoom-btn" onclick="zoomLesson(-0.1)" title="הקטן תצוגה"><i class="fa-solid fa-minus"></i></button>
                 <button class="zoom-btn" onclick="toggleLessonContrast()" title="היפוך צבעים (יום/לילה)"><i class="fa-solid fa-circle-half-stroke"></i></button>
 
-                <button class="zoom-btn" onclick="zoomLesson(-0.1)" title="הקטן תצוגה"><i class="fa-solid fa-minus"></i></button>
-                <button class="zoom-btn" onclick="zoomLesson(0.1)" title="הגדל תצוגה"><i class="fa-solid fa-plus"></i></button>
             </div>
 
         </div>
@@ -1668,10 +1667,13 @@
             <div id="editor-wrapper">
                 <div id="editor"></div>
                 <div class="editor-controls">
-                    <button class="zoom-btn" onclick="toggleEditorFullScreen()" title="מסך מלא"><i id="fs-editor-icon" class="fa-solid fa-expand"></i></button>
+
+
                     <button class="zoom-btn" onclick="toggleEditorTheme()" title="מצב יום/לילה"><i class="fa-solid fa-circle-half-stroke"></i></button>
                     <button class="zoom-btn" id="zoom-out-btn" title="הקטן טקסט"><i class="fa-solid fa-minus"></i></button>
                     <button class="zoom-btn" id="zoom-in-btn" title="הגדל טקסט"><i class="fa-solid fa-plus"></i></button>
+                    <button class="zoom-btn" onclick="toggleEditorFullScreen()" title="מסך מלא"><i id="fs-editor-icon" class="fa-solid fa-expand"></i></button>
+
                 </div>
             </div>
 
@@ -2571,7 +2573,8 @@
                     let c = files[f];
                     let i = c.match(importRegex);
                     if (i) i.forEach(x => allImports.add(x.trim()));
-                    let clean = c.replace(importRegex, "").replace(/\/\/.*/g, "").replace(/\r?\n/g, " ").replace(/\s+/g, " ").trim().replace(/public\s+class/g, "class").replace(/public\s+interface/g, "interface").replace(/public\s+enum/g, "enum");
+                    let clean = c.replace(importRegex, "").trim().replace(/public\s+class/g, "class").replace(/public\s+interface/g, "interface").replace(/public\s+enum/g, "enum");
+                    //let clean = c.replace(importRegex, "").replace(/\/\/.*/g, "").replace(/\r?\n/g, " ").replace(/\s+/g, " ").trim().replace(/public\s+class/g, "class").replace(/public\s+interface/g, "interface").replace(/public\s+enum/g, "enum");
                     otherContent += "\n" + clean;
                 });
 
@@ -3672,6 +3675,44 @@
             }
         }
 
+        // משתנים לשליטה בתצוגת ה-Visualizer
+        let vizScale = 1.0;
+        let isVizDark = true;
+
+        window.zoomViz = function (change) {
+            vizScale += change;
+            vizScale = Math.min(Math.max(0.5, vizScale), 2.0);
+            const iframe = document.getElementById('visualizer-iframe');
+            if (!iframe) return;
+
+            iframe.style.transform = `scale(${vizScale})`;
+            iframe.style.transformOrigin = 'top right';
+            iframe.style.width = vizScale === 1 ? "100%" : `${100 / vizScale}%`;
+            iframe.style.height = vizScale === 1 ? "100%" : `${100 / vizScale}%`;
+        };
+
+        window.toggleVizFullScreen = function () {
+            const box = document.querySelector('#visualizer-overlay .modal-box');
+            const icon = document.getElementById('fs-viz-icon');
+            const isFull = box.style.width === '100vw';
+
+            box.style.width = isFull ? '90%' : '100vw';
+            box.style.height = isFull ? '90%' : '100vh';
+            box.style.maxWidth = isFull ? '1200px' : 'none';
+            box.style.borderRadius = isFull ? '12px' : '0';
+
+            icon.classList.toggle('fa-expand', isFull);
+            icon.classList.toggle('fa-compress', !isFull);
+        };
+
+        window.toggleVizContrast = function () {
+            isVizDark = !isVizDark;
+            const iframe = document.getElementById('visualizer-iframe');
+            if (!iframe) return;
+            iframe.style.filter = isVizDark ? "invert(1) hue-rotate(180deg)" : "none";
+        };
+
+
         let isLessonDark = true;
         function toggleLessonFullScreen() {
             const panel = document.getElementById('lesson-panel');
@@ -3911,9 +3952,9 @@
             <textarea id="scratchpad-area" spellcheck="false" placeholder="כתוב כאן הערות חופשיות או קוד... שים לב! הטיוטה לא נשמרת לאחר התנתקות מהאתר" style="flex: 1; background: #1e1f20; color: #e3e3e3; border: none; padding: 20px; font-family: 'Consolas', monospace; font-size: 16px; resize: none; outline: none; line-height: 1.5; box-sizing: border-box; direction: ltr; text-align: left; overflow: auto; border-radius: 0 0 12px 12px;"></textarea>
             <div style="position: absolute; bottom: 20px; right: 25px; display: flex; gap: 8px; z-index: 10;">
                 <button class="zoom-btn" onclick="toggleScratchpadFullScreen()" title="מסך מלא"><i id="fs-scratch-icon" class="fa-solid fa-expand"></i></button>
-                <button class="zoom-btn" onclick="toggleScratchpadContrast()" title="מצב יום/לילה"><i class="fa-solid fa-circle-half-stroke"></i></button>
-                <button class="zoom-btn" onclick="zoomScratchpad(-1)" title="הקטן טקסט"><i class="fa-solid fa-minus"></i></button>
                 <button class="zoom-btn" onclick="zoomScratchpad(1)" title="הגדל טקסט"><i class="fa-solid fa-plus"></i></button>
+                <button class="zoom-btn" onclick="zoomScratchpad(-1)" title="הקטן טקסט"><i class="fa-solid fa-minus"></i></button>
+                <button class="zoom-btn" onclick="toggleScratchpadContrast()" title="מצב יום/לילה"><i class="fa-solid fa-circle-half-stroke"></i></button>
             </div>
 
         </div>
@@ -3937,6 +3978,14 @@
 
     <div id="visualizer-overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 30000; justify-content: center; align-items: center; backdrop-filter: blur(2px);">
         <div class="modal-box" style="width: 90%; height: 90%; max-width: 1200px; display: flex; flex-direction: column; padding: 0; overflow: hidden; background: #1e1f20; border: 1px solid #444746; position: relative;">
+
+            <div class="viz-controls" style="position: absolute; bottom: 20px; right: 25px; z-index: 20; display: flex; gap: 8px;">
+                <button class="zoom-btn" onclick="toggleVizFullScreen()" title="מסך מלא"><i id="fs-viz-icon" class="fa-solid fa-expand"></i></button>
+                <button class="zoom-btn" onclick="zoomViz(0.1)" title="הגדל תצוגה"><i class="fa-solid fa-plus"></i></button>
+                <button class="zoom-btn" onclick="zoomViz(-0.1)" title="הקטן תצוגה"><i class="fa-solid fa-minus"></i></button>
+
+                <button class="zoom-btn" onclick="toggleVizContrast()" title="מצב יום/לילה"><i class="fa-solid fa-circle-half-stroke"></i></button>
+            </div>
 
             <div style="background: #131314; padding: 10px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #2d2e30; direction: rtl; z-index: 10;">
                 <span style="color: #a8c7fa; font-weight: bold;">
